--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CETPRO - JFSC</title>
 </head>
-<body>
-    <h1>Bienvenidos a CETPRO - JFSC</h1>
+<body> 
+    <h1 class="btn-secundario tp-primaria" >Bienvenidos a CETPRO - JFSC</h1>
 </body>
 </html>
