interfaz de Login

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body> 
     <h1 class="btn-secundario tp-primaria" >Bienvenidos a CETPRO - JFSC</h1>
+    <h5 class="mt-3">Avatar</h5>
+<b-skeleton type="avatar"></b-skeleton>
 </body>
 </html>
