Archivos css/plugin, Se agrego tipografia archivo estilo.css

--- a/login.html
+++ b/login.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/datatables.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/plugin/bootstrap.css">
+    <link rel="stylesheet" href="css/plugin/bootstrap.min.css">
+    <link rel="stylesheet" href="css/plugin/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="css/plugin/fonts.css">
+    <link rel="stylesheet" href="css/plugin/fonts.min.css">
    <link rel="stylesheet" href="css/estilo.css">
     <title>Login Cetpro</title>
 </head>
@@ -15,7 +18,7 @@
 
     <div class="bg-white p-5 rounded-5" style="width:25rem">
         <div class="d-flex justify-content-center">
-            <img src="/assets/icono/logo.png" alt="Cetpro" style="height: 7rem" />
+            <img src="assets/icono/logo.png" alt="Cetpro" style="height: 7rem" />
         </div> 
     <div class="fw-bold">Usuario</div>  
     <div>
