interfaces cetpro corregido

--- a/ListaDocentes.html
+++ b/ListaDocentes.html
@@ -61,18 +61,18 @@
         </nav>
         <!-- Navbar -->
     </div>
-    <section class="d-flex justify-content-center p-3">
-        <div class="container col-sm-6">
-            <div class="row">
-                <div class="col-sm-9">
-                    <h1>Matricula</h1>
-                </div>
-            </div>
-            <div class="col-sm-3 d-flex"> 
-                <button class="btn btn-primary w-100 align-self-center"> Exportar</button>
-            </div>
+    <div class="container col-sm-6 mt-3">
+        <div class="row">
+          <div class="col-sm-10">
+            <h1>Docentes</h1>            
+          </div>
+          <div class="d-md-flex justify-content-md-end col-sm-2">
+            <button class="btn btn-outline-primary text-blue mx-3 btn-lg" type="button">Exportar</button>
+
+            <button class="btn btn-primary mx-1 btn-lg" type="button">Nuevo</button>
+          </div>          
         </div>
-    </section>
+      </div>
 
     <section class="d-flex justify-content-center p-3">
         <table class="table col-sm-6">
