--- a/ListaModulos.html
+++ b/ListaModulos.html
@@ -61,6 +61,18 @@
         </nav>
         <!-- Navbar -->
     </div>
+    <div class="container col-sm-6 mt-3">
+        <div class="row">
+          <div class="col-sm-10">
+            <h1>Módulos</h1>            
+          </div>
+          <div class="d-md-flex justify-content-md-end col-sm-2">
+            <button class="btn btn-outline-primary text-blue mx-3 btn-lg" type="button">Exportar</button>
+
+            <button class="btn btn-primary mx-1 btn-lg" type="button">Nuevo</button>
+          </div>          
+        </div>
+      </div>
     <section class="d-flex justify-content-center p-3">
         <table class="table col-sm-6">
             <thead>
