--- a/opcionocupacional.html
+++ b/opcionocupacional.html
@@ -12,7 +12,7 @@
                     Exportar
                 </button>
                 <button type="button" id="btn-nuevo-opcion" name="button"
-                    class="btn btn-large primary-button">
+                    class="btn btn-large primary-button" onclick="nuevoRegistroOpcion()">
                     Nuevo
                 </button>
             </div>
@@ -32,14 +32,7 @@
                         <th scope="col">Acciones</th>
                     </tr>
                 </thead>
-                <tbody class="table-group-divider">
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Electricidad y Electronica</td>
-                        <td>Electricidad</td>
-                        <td> </td>
-                    </tr>
-
+                <tbody class="table-group-divider" id="tb_opcion">
                 </tbody>
             </table>
 
@@ -47,3 +40,4 @@
 
     </div>
 </div>
+<script src="view/opcionocupacional/lista.js"></script>
