--- a/modulo.html
+++ b/modulo.html
@@ -12,7 +12,7 @@
                     Exportar
                 </button>
                 <button type="button" id="btn-nuevo-modulo" name="button"
-                    class="btn btn-large primary-button">
+                    class="btn btn-large primary-button" onclick="nuevoRegistroModulo()">
                     Nuevo
                 </button>
             </div>
@@ -33,22 +33,7 @@
                         <th scope="col">Acciones</th>
                     </tr>
                 </thead>
-                <tbody class="table-group-divider">
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Electricidad y Electronica</td>
-                        <td>Electricidad</td>
-                        <td>Instalaciones Eléctricas</td>
-                        <td> </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Electricidad y Electronica</td>
-                        <td>Electricidadn</td>
-                        <td>Reparación de Electrodomésticos</td>
-                        <td> </td>
-                    </tr>
-
+                <tbody class="table-group-divider" id="tb_modulo">
                 </tbody>
             </table>
 
@@ -56,3 +41,4 @@
 
     </div>
 </div>
+<script src="view/modulo/lista.js"></script>
